--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edgarmejia.github.io",
-  "homepage": "edgarmejia.github.io",
+  "homepage": "edgarmejia.github.io/index",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.0.1",
