--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "gatsby": "^2.0.76",
     "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-nprogress": "^2.3.1",
