--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-starter-hello-friend",
   "description": "A simple blog with Gatsby. That's it.",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "author": "Edgar Mejía <edgar13155@gmail.com>",
   "keywords": [
     "gatsby",
@@ -27,6 +27,7 @@
     "gatsby-awesome-pagination": "^0.3.3",
     "gatsby-background-image": "^1.1.1",
     "gatsby-image": "^2.0.20",
+    "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-nprogress": "^2.3.1",
     "gatsby-plugin-offline": "^2.0.16",
