--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "core-js": "^2.6.11",
     "gatsby": "^2.0.76",
     "gatsby-awesome-pagination": "^0.3.3",
+    "gatsby-cli": "^2.12.103",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-dark-mode": "^1.1.2",
     "gatsby-plugin-manifest": "^2.0.9",
