--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "edgarmejia.github.io",
+  "name": "edgarmejia.com",
   "description": "A simple blog with Gatsby. That's it.",
   "version": "0.6.3",
-  "author": "Edgar Mejía <edgar13155@gmail.com>",
+  "author": "Edgar Mejía <contact@edgarmejia.com>",
   "keywords": [
     "gatsby",
     "minimal",
