--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gatsby-cli": "^2.12.103",
     "gatsby-image": "^2.0.20",
     "gatsby-plugin-dark-mode": "^1.1.2",
+    "gatsby-plugin-layout": "^2.6.0",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-nprogress": "^2.3.1",
     "gatsby-plugin-offline": "^2.0.16",
@@ -37,7 +38,7 @@
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-plugin-styled-components": "^3.3.6",
-    "gatsby-plugin-transition-link": "^1.18.0",
+    "gatsby-plugin-transitions": "^2.1.7",
     "gatsby-remark-images": "^3.0.1",
     "gatsby-remark-prismjs": "^3.2.0",
     "gatsby-source-filesystem": "^2.0.8",
@@ -46,11 +47,12 @@
     "gatsby-transformer-sharp": "^2.1.8",
     "prismjs": "^1.15.0",
     "prop-types": "^15.6.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.10.0",
     "react-simple-snackbar": "^1.1.10",
+    "react-spring": "^9.2.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
