--- a/package.json
+++ b/package.json
@@ -22,60 +22,60 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "bootstrap": "^4.5.0",
-    "core-js": "^2.6.11",
-    "gatsby": "^2.0.76",
+    "babel-plugin-styled-components": "^2.0.6",
+    "bootstrap": "^5.1.3",
+    "core-js": "^3.21.1",
+    "gatsby": "^4.10.1",
     "gatsby-awesome-pagination": "^0.3.3",
-    "gatsby-cli": "^2.12.103",
-    "gatsby-image": "^2.0.20",
+    "gatsby-cli": "^4.10.1",
     "gatsby-plugin-dark-mode": "^1.1.2",
-    "gatsby-plugin-layout": "^2.6.0",
-    "gatsby-plugin-manifest": "^2.0.9",
-    "gatsby-plugin-nprogress": "^2.3.1",
-    "gatsby-plugin-offline": "^2.0.16",
-    "gatsby-plugin-postcss": "^2.0.2",
-    "gatsby-plugin-react-helmet": "^3.0.2",
-    "gatsby-plugin-sharp": "^2.0.17",
-    "gatsby-plugin-styled-components": "^3.3.6",
+    "gatsby-plugin-image": "^2.10.0",
+    "gatsby-plugin-layout": "^3.10.0",
+    "gatsby-plugin-manifest": "^4.10.1",
+    "gatsby-plugin-nprogress": "^4.10.0",
+    "gatsby-plugin-offline": "^5.10.1",
+    "gatsby-plugin-postcss": "^5.10.0",
+    "gatsby-plugin-react-helmet": "^5.10.0",
+    "gatsby-plugin-sharp": "^4.10.1",
+    "gatsby-plugin-styled-components": "^5.10.0",
     "gatsby-plugin-transitions": "^2.1.7",
-    "gatsby-remark-images": "^3.0.1",
-    "gatsby-remark-prismjs": "^3.2.0",
-    "gatsby-source-filesystem": "^2.0.8",
-    "gatsby-transformer-remark": "^2.1.19",
-    "gatsby-transformer-sharp": "^2.1.8",
-    "prismjs": "^1.15.0",
+    "gatsby-remark-images": "^6.10.1",
+    "gatsby-remark-prismjs": "^6.10.0",
+    "gatsby-source-filesystem": "^4.10.0",
+    "gatsby-transformer-remark": "^5.10.1",
+    "gatsby-transformer-sharp": "^4.10.0",
+    "prismjs": "^1.27.0",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^3.10.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
     "react-simple-snackbar": "^1.1.10",
-    "react-spring": "^9.2.1",
+    "react-spring": "^9.4.4",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "babel-eslint": "^10.0.1",
-    "babel-preset-gatsby": "^0.1.6",
-    "cssnano": "^4.1.8",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
+    "babel-preset-gatsby": "^2.10.0",
+    "cssnano": "^5.1.4",
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-react-hooks": "^1.4.0",
-    "gatsby-remark-embed-video": "^1.7.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-mixins": "^6.2.1",
-    "postcss-nested": "^4.1.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-url": "^8.0.0",
-    "prettier": "^1.15.2",
-    "rambdax": "^1.8.0"
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "gatsby-remark-embed-video": "^3.1.1",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-mixins": "^9.0.2",
+    "postcss-nested": "^5.0.6",
+    "postcss-preset-env": "^7.4.3",
+    "postcss-url": "^10.1.3",
+    "prettier": "^2.6.0",
+    "rambdax": "^8.0.1"
   },
   "repository": {
     "type": "git",
