--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@babel/core": "^7.17.8",
     "@material-ui/core": "^4.11.0",
     "babel-plugin-styled-components": "^2.0.6",
     "bootstrap": "^5.1.3",
@@ -38,12 +39,13 @@
     "gatsby-plugin-react-helmet": "^5.10.0",
     "gatsby-plugin-sharp": "^4.10.1",
     "gatsby-plugin-styled-components": "^5.10.0",
-    "gatsby-plugin-transitions": "^2.1.7",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-images": "^6.10.1",
     "gatsby-remark-prismjs": "^6.10.0",
     "gatsby-source-filesystem": "^4.10.0",
     "gatsby-transformer-remark": "^5.10.1",
     "gatsby-transformer-sharp": "^4.10.0",
+    "postcss": "^8.4.12",
     "prismjs": "^1.27.0",
     "prop-types": "^15.6.2",
     "react": "^17.0.2",
@@ -52,7 +54,8 @@
     "react-icons": "^4.3.1",
     "react-simple-snackbar": "^1.1.10",
     "react-spring": "^9.4.4",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "typescript": "^4.6.2"
   },
   "devDependencies": {
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
